# C.Origami_vGeneric

./: .gitignore  README.md  pyproject.toml
singularity/: Singularity_corigami.def  corigami_singularity_usage.sh  maxatac_Singularity.def  maxatac_singularity_usage.sh
src/corigami/data/: chromosome_dataset.py  data_feature.py  genome_dataset.py
src/corigami/model/: blocks.py  corigami_models.py
src/corigami/training/: main.py
