[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corigami"
version = "0.1.0"
description = "C.Origami: A deep learning model for predicting chromatin organization"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Javier Rodriguez", email = "javrodriguez@stanford.edu"}
]
dependencies = [
    "torch>=1.12.0",
    "torchvision>=0.13.0",
    "pandas>=1.3.0",
    "matplotlib>=3.3.2",
    "omegaconf>=2.1.1",
    "tqdm>=4.64.0",
    "pybigwig>=0.3.18",
    "scipy",
    "cooler",
    "pytorch-lightning>=2.0.0",
    "lightning-bolts>=0.5.0",
    "scikit-image>=0.19.3",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.900",
    "flake8>=4.0",
]

[tool.setuptools]
packages = ["corigami"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=corigami"

[project.urls]
Homepage = 'https://github.com/tanjimin/C.Origami'
Repository = 'https://github.com/tanjimin/C.Origami'

[project.scripts]
corigami-predict = 'corigami.inference.prediction:main'
corigami-edit = 'corigami.inference.editing:main'
corigami-screen = 'corigami.inference.screening:main'
corigami-train= 'corigami.training.main:main'

